# da-agent

./: .gitignore  LICENSE  PHASE1_COMPLETE.md  README.md  cli.py  install-local.sh  package.json  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
assets/sql_templates/: simple_aggregation.py.jinja2
commands/: analyze.md
docs/: ARCHITECTURE.md  QUICKSTART.md  USAGE_GUIDE.md
lib/: code_generator.py  complexity_scorer.py  executor.py  knowledge_store.py  security_wrapper.py
outputs/: result.csv
skills/analyze-request/: SKILL.md
skills/analyze-request/references/: complexity-scoring-rubric.md  question-templates.md
skills/execute-auto/: SKILL.md
tests/: demo_phase1.py  test_code_generator.py  test_complexity_scorer.py  test_executor.py  test_knowledge_store.py  test_security_wrapper.py
tests/fixtures/: sample_data.csv
