[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "da-agent"
version = "0.1.0"
description = "Data Analysis Agent with Layered Intelligent Routing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.25.0",
    "jinja2>=3.1.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
